--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <header class="relative mb-8 w-full">
             <div class="relative w-full h-[400px] md:h-[500px] overflow-hidden">
-                <img src="assets/simpsons.jpg" alt="The Simpsons family sitting on their iconic couch, as requested for the brand theme." class="w-full h-full object-cover">
+                <img src="assets/wom-simpsons.jpg" alt="The Simpsons family sitting on their iconic couch, as requested for the brand theme." class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-white"></div>
             </div>
             <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
@@ -330,3 +330,4 @@
     </script>
 </body>
 </html>
+
